# tg-parser

./: .gitignore  README.md  pyproject.toml
parser/: __init__.py  cli.py
parser/api/: __init__.py  client.py  entities.py
parser/models/: __init__.py  message.py
parser/utils/: __init__.py  file.py  logging.py
